# 1D-DG

./: .gitignore  CMakeLists.txt  Makefile  README.md  RTM.script  animate.gnuplot  comparaison.xls  m_acoustic.f90  m_adjoint.f90  m_adjoint_test.f90  m_animation.f90  m_file_function.f90  m_fwi.f90  m_init_application.f90  m_matrix.f90  m_polynom.f90  m_powermethod.f90  m_time_scheme.f90  main.f90  param.par  script.gnuplot  script_base_b.gnu  script_base_l.gnu  script_test_b2l.gnu  script_test_derive.gnu  script_test_l2b.gnu  trace2.gnuplot
animation_script/: animate.gnuplot  animation.py  environnment.yml  script.gnuplot
applications/: forward.f90  fwi.f90
gnuplot_script/: script.gnuplot  trace2.gnuplot
src/: m_acoustic.f90  m_adjoint.f90  m_adjoint_test.f90  m_animation.f90  m_file_function.f90  m_fwi.f90  m_init_application.f90  m_matrix.f90  m_polynom.f90  m_powermethod.f90  m_time_scheme.f90
tests/: test_abc_ab3.f90  test_abc_lf.f90  test_abc_rk4.f90  test_bernstein.f90  test_fwd_periodic_error_lag_lf.f90  test_hello.f90  test_mass_matrix_bb_eval.f90  test_mass_matrix_lag_eval.f90  test_stiff_matrix_bb_eval.f90  test_stiff_matrix_lag_eval.f90
